force-app/main/default/objects/Membership__c/fields/Accessibility_Needs__c.field-meta.xml
<CustomField>
    <fullName>Accessibility_Needs__c</fullName>
    <label>Accessibility Needs?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>