force-app/main/default/objects/Membership__c/fields/Accessibility_Needs_Description__c.field-meta.xml
<CustomField>
    <fullName>Accessibility_Needs_Description__c</fullName>
    <label>Accessibility Needs Description</label>
    <type>TextArea</type>
</CustomField>