force-app/main/default/objects/Membership__c/fields/Active_Membership__c.field-meta.xml
<CustomField>
    <fullName>Active_Membership__c</fullName>
    <formula>TODAY() &lt;= (Date_of_purchase__c + 365)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Membership</label>
    <type>Checkbox</type>
</CustomField>