force-app/main/default/objects/Membership__c/fields/CC2__c.field-meta.xml
<CustomField>
    <fullName>CC2__c</fullName>
    <label>CC2</label>
    <type>Email</type>
</CustomField>