force-app/main/default/objects/Membership__c/fields/EmailSent__c.field-meta.xml
<CustomField>
    <fullName>EmailSent__c</fullName>
    <formula>NOW() - CreatedDate &gt; (62 / 1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EmailSent</label>
    <type>Checkbox</type>
</CustomField>