force-app/main/default/objects/Membership__c/fields/FirstLastEmail__c.field-meta.xml
<CustomField>
    <fullName>FirstLastEmail__c</fullName>
    <formula>First_Name__c + Last_Name__c + Email_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FirstLastEmail</label>
    <type>Text</type>
</CustomField>