force-app/main/default/objects/Membership__c/fields/Form_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Form_Completion_Date__c</fullName>
    <label>Form Completion Date</label>
    <type>DateTime</type>
</CustomField>