force-app/main/default/objects/Membership__c/fields/If_another_not_listed__c.field-meta.xml
<CustomField>
    <fullName>If_another_not_listed__c</fullName>
    <label>If another not listed</label>
    <length>30</length>
    <type>Text</type>
</CustomField>