force-app/main/default/objects/Membership__c/fields/Lead_Membership__c.field-meta.xml
<CustomField>
    <fullName>Lead_Membership__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Membership</label>
    <type>Checkbox</type>
</CustomField>