force-app/main/default/objects/Membership__c/fields/List_Serv__c.field-meta.xml
<CustomField>
    <fullName>List_Serv__c</fullName>
    <label>List Serv</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>[MAIN LISTSERV] Statewide</fullName>
            </value>
            <value>
                <fullName>Capital Region Expanded Learning Opportunities (Regional Network)</fullName>
            </value>
            <value>
                <fullName>Expanded Learning Network of the Southern Tier (Regional Network)</fullName>
            </value>
            <value>
                <fullName>Hudson Valley Afterschool Network (Regional Network)</fullName>
            </value>
            <value>
                <fullName>North Country Afterschool Network (Regional Network)</fullName>
            </value>
            <value>
                <fullName>After-School Network of Western New York (Regional Network)</fullName>
            </value>
            <value>
                <fullName>Mid-Hudson Valley (Regional Network)</fullName>
            </value>
            <value>
                <fullName>Hudson Out-of-School Time Collaborative (Regional Network)</fullName>
            </value>
            <value>
                <fullName>[STEM LISTSERV] STEM</fullName>
            </value>
            <value>
                <fullName>Long Island (Regional Network)</fullName>
            </value>
            <value>
                <fullName>New York City (Regional Network)</fullName>
            </value>
            <value>
                <fullName>Oswego Out of School Time (Regional Network)</fullName>
            </value>
            <value>
                <fullName>Syracuse (Regional Network)</fullName>
            </value>
            <value>
                <fullName>[POLICY &amp; ADVOCACY LISTSERV] Power of 3:00</fullName>
            </value>
            <value>
                <fullName>Niagara, Erie, Chautauqua, Cattaraugus, Wyoming, Genesee, Monroe, Livingston, Allegany Counties (Regional Listserv)</fullName>
            </value>
            <value>
                <fullName>Wayne County MOST (Regional Network)</fullName>
            </value>
            <value>
                <fullName>Monroe County (Regional Network)</fullName>
            </value>
            <value>
                <fullName>Broome &amp; Tioga (Regional Network)</fullName>
            </value>
            <value>
                <fullName>Chautauqua (Regional Network)</fullName>
            </value>
            <value>
                <fullName>Community Schools Network</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>