force-app/main/default/objects/Membership__c/fields/Main_Membership__c.field-meta.xml
<CustomField>
    <fullName>Main_Membership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Membership</label>
    <referenceTo>Membership__c</referenceTo>
    <relationshipLabel>Memberships</relationshipLabel>
    <relationshipName>Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>