force-app/main/default/objects/Membership__c/fields/Membership_Choice__c.field-meta.xml
<CustomField>
    <fullName>Membership_Choice__c</fullName>
    <label>Membership Choice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Year Individual</fullName>
            </value>
            <value>
                <fullName>3 Year Individual</fullName>
            </value>
            <value>
                <fullName>1 Year Organization (11-15 members)</fullName>
            </value>
            <value>
                <fullName>1 Year Organization (16-20 members)</fullName>
            </value>
            <value>
                <fullName>1 Year Organization (21-50 members)</fullName>
            </value>
            <value>
                <fullName>1 Year Organization (51-75 members)</fullName>
            </value>
            <value>
                <fullName>1 Year Organization (76-100 members)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>