force-app/main/default/objects/Membership__c/fields/Membership_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Membership_Expiration_Date__c</fullName>
    <formula>CASE(
    Membership_Choice__c,
    &quot;1 Year Individual&quot;, CreatedDate + 365,
    &quot;1 Year Organization (11-15 members)&quot;, CreatedDate + 365,
    &quot;1 Year Organization (16-20 members)&quot;, CreatedDate + 365,
    &quot;1 Year Organization (21-50 members)&quot;, CreatedDate + 365,
    &quot;1 Year Organization (51-75 members)&quot;, CreatedDate + 365,
    &quot;1 Year Organization (76-100 members)&quot;, CreatedDate + 365,
    &quot;3 Year Individual&quot;, CreatedDate + 1095,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership Expiration Date</label>
    <type>Date</type>
</CustomField>