force-app/main/default/objects/Membership__c/fields/Membership_Expired__c.field-meta.xml
<CustomField>
    <fullName>Membership_Expired__c</fullName>
    <formula>TODAY() &gt; CASE(
    Membership_Choice__c,
    &quot;1 Year Individual&quot;, DATEVALUE(Form_Completion_Date__c) + 365,
    &quot;1 Year Organization (11-15 members)&quot;, DATEVALUE(Form_Completion_Date__c) + 365,
    &quot;1 Year Organization (16-20 members)&quot;, DATEVALUE(Form_Completion_Date__c) + 365,
    &quot;1 Year Organization (21-50 members)&quot;, DATEVALUE(Form_Completion_Date__c) + 365,
    &quot;1 Year Organization (51-75 members)&quot;, DATEVALUE(Form_Completion_Date__c) + 365,
    &quot;1 Year Organization (76-100 members)&quot;, DATEVALUE(Form_Completion_Date__c) + 365,
    &quot;3 Year Individual&quot;, DATEVALUE(Form_Completion_Date__c) + 1095,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership Expired</label>
    <type>Checkbox</type>
</CustomField>