force-app/main/default/objects/Membership__c/fields/Membership_Form_Type__c.field-meta.xml
<CustomField>
    <fullName>Membership_Form_Type__c</fullName>
    <label>Membership Form Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Membership</fullName>
            </value>
            <value>
                <fullName>List Serv</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>