force-app/main/default/objects/Membership__c/fields/Membership_ID__c.field-meta.xml
<CustomField>
    <fullName>Membership_ID__c</fullName>
    <displayFormat>NYS-{000000}</displayFormat>
    <label>Membership ID</label>
    <type>AutoNumber</type>
</CustomField>