force-app/main/default/objects/Membership__c/fields/Membership_Individual_3_Year__c.field-meta.xml
<CustomField>
    <fullName>Membership_Individual_3_Year__c</fullName>
    <label>Membership, Individual 3 Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>