force-app/main/default/objects/Membership__c/fields/Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>Membership_Number__c</fullName>
    <displayFormat>NYS-{00000}</displayFormat>
    <label>Membership Number</label>
    <type>AutoNumber</type>
</CustomField>