force-app/main/default/objects/Membership__c/fields/Membership_Organization_1_Year_21_50__c.field-meta.xml
<CustomField>
    <fullName>Membership_Organization_1_Year_21_50__c</fullName>
    <label>Membership, Organization, 1 Year (21-50)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>