force-app/main/default/objects/Membership__c/fields/Preferred_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_First_Name__c</fullName>
    <label>Preferred First Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>