force-app/main/default/objects/Membership__c/fields/Stripe_Order__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stripe Order</label>
    <referenceTo>Stripe_Order__c</referenceTo>
    <relationshipLabel>Memberships</relationshipLabel>
    <relationshipName>Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>