force-app/main/default/objects/Membership__c/fields/Submission_URL__c.field-meta.xml
<CustomField>
    <fullName>Submission_URL__c</fullName>
    <formula>&quot;https://newyorkstatenetworkforyouthsucces--b3f.vf.force.com/apex/PreviewForm?id=&quot; +
IF(
ISBLANK(Form_Response__r.Name),
&quot;&quot;,
Form_Response__r.Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submission URL</label>
    <type>Text</type>
</CustomField>